-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u161, 9, 10
-
Component/s: hotspot
-
b21
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8185715 | 9 | Tobias Hartmann | P3 | Closed | Won't Fix | |
| JDK-8188609 | 8u172 | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8190596 | 8u171 | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8184791 | 8u162 | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8198048 | emb-8u171 | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
MethodData::data_at(int data_index) may return NULL if the data_index is out of bounds but the code in InterpreterRuntime::update_mdp_for_ret() does not check for NULL:
ProfileData* data = h_mdo->data_at(h_mdo->dp_to_di(fr.interpreter_frame_mdp()));
RetData* rdata = data->as_RetData();
ProfileData* data = h_mdo->data_at(h_mdo->dp_to_di(fr.interpreter_frame_mdp()));
RetData* rdata = data->as_RetData();
- backported by
-
JDK-8184791 Missing null pointer check in InterpreterRuntime::update_mdp_for_ret()
-
- Resolved
-
-
JDK-8188609 Missing null pointer check in InterpreterRuntime::update_mdp_for_ret()
-
- Resolved
-
-
JDK-8190596 Missing null pointer check in InterpreterRuntime::update_mdp_for_ret()
-
- Resolved
-
-
JDK-8198048 Missing null pointer check in InterpreterRuntime::update_mdp_for_ret()
-
- Resolved
-
-
JDK-8185715 Missing null pointer check in InterpreterRuntime::update_mdp_for_ret()
-
- Closed
-