8184009: Missing null pointer check in InterpreterRuntime::update_mdp_for_ret()

Adds a missing null check (guarantee) found by Parfait.

Reviewed-by: coleenp, shade